content/browser/renderer_host/offscreen_canvas_surface_impl.h
@@ -14,7 +14,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace content {
 
-class OffscreenCanvasSurfaceImpl : public blink::mojom::OffscreenCanvasSurface {
+class CONTENT_EXPORT OffscreenCanvasSurfaceImpl
+    : public blink::mojom::OffscreenCanvasSurface {
  public:
   OffscreenCanvasSurfaceImpl();
   ~OffscreenCanvasSurfaceImpl() override;
@@ -27,10 +28,12 @@ class OffscreenCanvasSurfaceImpl : public blink::mojom::OffscreenCanvasSurface {
                const cc::SurfaceSequence& sequence) override;
   void Satisfy(const cc::SurfaceSequence& sequence) override;
 
+  const cc::FrameSinkId& frame_sink_id() const { return frame_sink_id_; }
+
  private:
   // Surface-related state
   std::unique_ptr<cc::SurfaceIdAllocator> id_allocator_;
-  cc::SurfaceId surface_id_;
+  cc::FrameSinkId frame_sink_id_;
 
   DISALLOW_COPY_AND_ASSIGN(OffscreenCanvasSurfaceImpl);
 };
